# mlb-baseball

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_EVALUATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FINAL_WORKFLOW_SUMMARY.md  GITHUB_WORKFLOW_GUIDE.md  GITHUB_WORKFLOW_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INGESTOR_ANALYSIS.md  MIGRATION_MATRIX.md  NEXT_STEPS_SUMMARY.md  PHASE_COMPLETION_REPORT.md  RAW_DATA_INGESTION_MILESTONE_SUMMARY.md  README.md  TASK_COMPLETION_SUMMARY.md  fix.sh  pyproject.toml  task_complete.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
baseball/: __init__.py  __main__.py
baseball/cli/: __init__.py  app.py
baseball/core/: __init__.py  enums.py  exceptions.py  logging.py  results.py  types.py
baseball/data/: __init__.py  query.py  sources.py  sources_v2.py
baseball/db/: __init__.py  bootstrap.py  bridge.py  config.py  connection.py  ingest.py  migrations.py  models.py  schema.py  validators.py
baseball/services/: __init__.py  bridging.py  downloads.py  live_games.py  normalization.py  validation.py
baseball/sources/: __init__.py  contracts.py  fangraphs.py  lahman.py  mlbstatsapi.py  registry.py  retrosheet.py  statcast.py
docs/: README.md  migration-matrix.md  phase-completion-report.md  review_0509261740.md
docs/architecture/: README.md  architecture-evaluation-summary.md  architecture-overview.md  download-architecture-detailed.md  implementation-summary.md  source-adapters.md
docs/reviews/: 2026-05-09-code-review.md  README.md
docs/sources/: README.md  espn-raw-schema-guide.md  espn-source-notes.md  fangraphs-raw-schema-guide.md  fangraphs-source-notes.md  lahman-raw-schema-guide.md  lahman-source-notes.md  mlb-statsapi-raw-schema-guide.md  mlb-statsapi-source-notes.md  retrosheet-raw-schema-guide.md  retrosheet-source-notes.md  statcast-raw-schema-guide.md  statcast-source-notes.md
docs/sql/: 001_raw_retrosheet.md  002_raw_statcast.md  003_raw_lahman  004_raw_mlbstatsapi.md  005_raw_fangraphs.md  006_raw_espn.md  007_raw_bbref.md  README.md  raw-ddl-next-steps.md  raw-ddl-source-matrix.md
plans/: 2026-05-13-raw_data_ingestion_completion_plan-v1.md  2026-05-13-raw_data_ingestion_milestone-v1.md  2026-05-13-raw_data_ingestion_milestone_detailed-v1.md  2026-05-13-testing_plan-v2.md  2026-05-14-bootstrap_testing_plan-v1.md  2026-05-14-database_bootstrap_plan-v1.md  2026-05-15-resolve_sqlalchemy_errors-v1.md
sql/10_extensions/: 01_uuid.sql  02_pg_trgm.sql  03_btree_gin.sql  README.md
sql/20_schemas/: 01_baseball.sql  02_pipeline_schemas.sql  README.md
sql/50_tables_core/: 01_mlb_schedule.sql  02_statcast_pitches.sql  03_retro_events.sql  04_player.sql  05_team.sql  06_park.sql  07_game.sql  08_schedule.sql  09_play_by_play.sql  10_pitch.sql  (+9 more)
tests/: conftest.py  test_basic.py  test_cli_db.py  test_cli_download.py  test_cli_ingest.py  test_cli_status.py  test_cli_validate.py  test_core_enums.py  test_core_exceptions.py  test_core_logging.py  test_core_results.py  test_data.py  test_db_bootstrap.py  test_db_connection.py  test_db_migrations.py  test_db_models.py  test_services_downloads.py  test_services_validation.py  test_sources_common.py  test_sources_espn_ingestor.py  test_sources_fangraphs_ingestor.py  test_sources_lahman_ingestor.py  test_sources_mlb_downloader.py  test_sources_mlb_ingestor.py  test_sources_retrosheet_downloader.py  test_sources_retrosheet_ingestor.py  test_sources_statcast_downloader.py  test_sources_statcast_ingestor.py  test_sources_weather_ingestor.py
(+85 files in other folders)
