[project]
name = "baseball"
version = "2.0.0"
description = "MLB baseball analytics platform: multi-source ETL pipeline for Retrosheet, StatCast, MLB API, FanGraphs, Lahman, and ESPN data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Blaine Winslow" }
]

# Core runtime dependencies for this repo
dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "pybaseball>=2.2.7",
  "psycopg[binary,pool]>=3.2.1",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2024.1",
  "structlog>=24.2.0",
  # Previously missing — required by sources/common/http.py and retries.py
  "tenacity>=8.2.0",
  # Previously missing — required by sources/common/files.py, mlb/downloader.py,
  # fangraphs/downloader.py, services/normalization.py
  "pandas>=2.0.0",
  "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.99.0",
  "ruff>=0.5.0",
  "pyright>=1.1.365",
  "pre-commit>=3.7.0",
  "bandit>=1.7.10",
  "pip-audit>=2.7.3",
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.0",
]
docs = [
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
research = [
  "duckdb>=1.0.0",
  "pyarrow>=17.0.0",
  "polars>=1.4.0",
]

[project.scripts]
# This assumes you have baseball/cli/app.py with `app = typer.Typer(...)`
baseball = "baseball.cli.app:app"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["baseball*"]

# ---------------------------
# Tooling configuration
# ---------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
respect-gitignore = true
src = ["baseball", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
]
ignore = [
  "E203",
  "E266",
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
typeCheckingMode = "strict"
include = ["baseball", "tests"]
exclude = [".venv", ".git", "build", "dist"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=baseball --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["baseball"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.bandit]
targets = ["baseball"]
exclude = ["tests", "docs"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
